--- a/SCME.UI/CustomControl/ListViewTestParametersSelection.xaml
+++ b/SCME.UI/CustomControl/ListViewTestParametersSelection.xaml
@@ -9,6 +9,7 @@
              xmlns:vtmParameters="clr-namespace:SCME.Types.VTM;assembly=SCME.Types"
              xmlns:dVdtParameters="clr-namespace:SCME.Types.dVdt;assembly=SCME.Types"
              xmlns:atuParameters="clr-namespace:SCME.Types.ATU;assembly=SCME.Types"
+             xmlns:customControls="WpfControlLibrary"
              Background="{StaticResource xWhite1}" HorizontalAlignment="Stretch">
     <ListView.Resources>
 
@@ -500,7 +501,7 @@
 
                                     <Label Grid.Column="0" Grid.Row="0" Margin="0,0,0,0"
                                            Content="{x:Static res:Resources.Current_A}" />
-                                    <customControl:ValidatingTextBox Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" FontSize="{StaticResource FontSize20}"
+                                    <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" FontSize="{StaticResource FontSize20}"
                                                                      Margin="0,2" Padding="1" HorizontalContentAlignment="Right" 
                                                                      Text="{Binding RampCurrent}"/>
 
