--- a/SCME.UI/PagesTech/ClampPage.xaml
+++ b/SCME.UI/PagesTech/ClampPage.xaml
@@ -6,6 +6,7 @@
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl" xmlns:ui="clr-namespace:SCME.UI"
       xmlns:res="clr-namespace:SCME.UI.Properties"
       xmlns:d3="http://research.microsoft.com/DynamicDataDisplay/1.0"
+      xmlns:customControls="WpfControlLibrary"
       mc:Ignorable="d" x:Name="clampPage" 
       d:DesignWidth="1280" d:DesignHeight="924" Title="{x:Static res:Resources.Clamp}">
 
@@ -85,14 +86,14 @@
 
                 <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.Force}" />
 
-                <customControl:ValidatingTextBox Grid.Column="1" Grid.Row="0" Margin="10" Padding="5"
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="0" Margin="10" Padding="5"
                           TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxForceCS}" Minimum="{StaticResource MinForceCS}"
                           IsNumeric="True" IsFloat="True"
                           Text="{Binding ElementName=clampPage, Path=ClampParameters.CustomForce}" />
 
                 <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Height}" />
 
-                <customControl:ValidatingTextBox Grid.Column="1" Grid.Row="1" Margin="10" Padding="5"
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="1" Margin="10" Padding="5"
                           TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxHeightCS}" Minimum="{StaticResource MinHeightCS}"
                           IsNumeric="True" 
                           Text="{Binding ElementName=clampPage, Path=ClampParameters.Height}" />
@@ -110,7 +111,7 @@
 
                 <Label Grid.Column="0" Grid.Row="9" Content="{x:Static res:Resources.Temp}" />
 
-                <customControl:ValidatingTextBox Grid.Column="1" Grid.Row="9" Margin="10" Padding="5"
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="9" Margin="10" Padding="5"
                           TextBlock.TextAlignment="Right" Maximum="{StaticResource MaxTempCS}" Minimum="{StaticResource MinTempCS}"
                           IsNumeric="True" 
                           Text="{Binding ElementName=clampPage, Path=Temperature}" />
