--- a/SCME.UI/PagesTech/PasswordPage.xaml
+++ b/SCME.UI/PagesTech/PasswordPage.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:res="clr-namespace:SCME.UI.Properties"
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
+      xmlns:customControls="WpfControlLibrary"
       mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="924"
       Title="" Background="Transparent">
     
@@ -34,7 +35,7 @@
             <Button Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.Cancel}" Width="250" Padding="10" Click="BtnCancel_OnClick" />
             <Button Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.Ok}" Width="250" Padding="10" Click="BtnOk_Clicked" />
 
-            <customControl:ValidatingTextBox x:Name="tbPassword" x:FieldModifier="private"
+            <customControls:ValidatingTextBox x:Name="tbPassword" x:FieldModifier="private"
                          Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3"
                          TextBlock.TextAlignment="Center" TextBlock.FontSize="26"
                          Text="" Focusable="True" Padding="8"/>
