--- a/SCME.UI/PagesTech/QrrTqPage.xaml
+++ b/SCME.UI/PagesTech/QrrTqPage.xaml
@@ -6,6 +6,7 @@
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl" xmlns:ui="clr-namespace:SCME.UI"
       xmlns:dynamicDataDisplay="clr-namespace:Microsoft.Research.DynamicDataDisplay;assembly=DynamicDataDisplay"
       xmlns:res="clr-namespace:SCME.UI.Properties"
+      xmlns:customControls="WpfControlLibrary"
       mc:Ignorable="d" x:Name="qrrTqPage"
       d:DesignWidth="1280" d:DesignHeight="924"
       Title="{x:Static res:Resources.QrrTq}">
@@ -82,13 +83,13 @@
                 <CheckBox Grid.Column="1" Grid.Row="1" IsChecked="{Binding Parameters.TrrMeasureBy9050Method, ElementName=qrrTqPage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="" Visibility="{Binding Parameters.Mode, ConverterParameter=TrrMeasureBy9050Method, Converter={StaticResource QrrTqM2V}, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.QrrTqDirectCurrent}" />
-                <customControl:ValidatingTextBox x:Name="vtbDirectCurrent" Grid.Column="2" Grid.Row="2" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="50" Maximum="500" Text="{Binding Parameters.DirectCurrent, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}" />
+                <customControls:ValidatingTextBox x:Name="vtbDirectCurrent" Grid.Column="2" Grid.Row="2" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="50" Maximum="500" Text="{Binding Parameters.DirectCurrent, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}" />
 
                 <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.QrrTqDCPulseWidth}"/>
-                <customControl:ValidatingTextBox x:Name="lbDCPulseWidth" Grid.Column="1" Grid.Row="3" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="500" Maximum="5000" Text="{Binding Parameters.DCPulseWidth, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}"/>
+                <customControls:ValidatingTextBox x:Name="lbDCPulseWidth" Grid.Column="1" Grid.Row="3" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="500" Maximum="5000" Text="{Binding Parameters.DCPulseWidth, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.QrrTqDCRiseRate}"/>
-                <customControl:ValidatingTextBox x:Name="lbDCRiseRate" Grid.Column="1" Grid.Row="4" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" IsFloat="True" Minimum="0.2" Maximum="5" Text="{Binding Parameters.DCRiseRate, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}"/>
+                <customControls:ValidatingTextBox x:Name="lbDCRiseRate" Grid.Column="1" Grid.Row="4" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" IsFloat="True" Minimum="0.2" Maximum="5" Text="{Binding Parameters.DCRiseRate, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.QrrTqDCFallRate}"/>
                 <ComboBox Grid.Column="1" Grid.Row="5" Padding="5" Margin="10,9,10,10"
@@ -97,7 +98,7 @@
                           Style="{StaticResource CComboboxStyle}"/>
 
                 <Label Grid.Column="0" Grid.Row="6" Content="{x:Static res:Resources.QrrTqOffStateVoltage}" Visibility="{Binding Parameters.Mode, ConverterParameter=OffStateVoltage, Converter={StaticResource QrrTqM2V}, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}"/>
-                <customControl:ValidatingTextBox x:Name="lbOffStateVoltage" Grid.Column="1" Grid.Row="6" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="400" Maximum="1900" Text="{Binding Parameters.OffStateVoltage, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}" Visibility="{Binding Parameters.Mode, ConverterParameter=OffStateVoltage, Converter={StaticResource QrrTqM2V}, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}"/>
+                <customControls:ValidatingTextBox x:Name="lbOffStateVoltage" Grid.Column="1" Grid.Row="6" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="400" Maximum="1900" Text="{Binding Parameters.OffStateVoltage, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}" Visibility="{Binding Parameters.Mode, ConverterParameter=OffStateVoltage, Converter={StaticResource QrrTqM2V}, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Label Grid.Column="0" Grid.Row="7" Content="{x:Static res:Resources.QrrTqOsvRate}" Visibility="{Binding Parameters.Mode, ConverterParameter=OsvRate, Converter={StaticResource QrrTqM2V}, ElementName=qrrTqPage, UpdateSourceTrigger=PropertyChanged}"/>
                 <ComboBox Grid.Column="1" Grid.Row="7" Padding="5" Margin="10,9,10,10"
@@ -108,13 +109,13 @@
 
 
                 <Label Content="{x:Static res:Resources.Height_Prof}" Grid.Column="0" Grid.Row="8" />
-                <customControl:ValidatingTextBox Grid.Column="1" Grid.Row="8" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="0" Maximum="100000" Text="{Binding ClampParameters.Height, ElementName=qrrTqPage}" />
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="8" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="0" Maximum="100000" Text="{Binding ClampParameters.Height, ElementName=qrrTqPage}" />
 
                 <Label Content="{x:Static res:Resources.Temp}" Grid.Column="0" Grid.Row="9" />
-                <customControl:ValidatingTextBox Grid.Column="1" Grid.Row="9" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="0" Maximum="200" Text="{Binding Temperature, ElementName=qrrTqPage}" />
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="9" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="0" Maximum="200" Text="{Binding Temperature, ElementName=qrrTqPage}" />
 
                 <Label Content="{x:Static res:Resources.Force}" Grid.Column="0" Grid.Row="10" />
-                <customControl:ValidatingTextBox Grid.Column="1" Grid.Row="10"  Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="200" Minimum="0" Text="{Binding ClampParameters.CustomForce, ElementName=qrrTqPage}" />
+                <customControls:ValidatingTextBox Grid.Column="1" Grid.Row="10"  Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Maximum="200" Minimum="0" Text="{Binding ClampParameters.CustomForce, ElementName=qrrTqPage}" />
 
                 <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="12">
                     <Grid.ColumnDefinitions>
