--- a/SCME.UI/PagesTech/RACPage.xaml
+++ b/SCME.UI/PagesTech/RACPage.xaml
@@ -6,6 +6,7 @@
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl" xmlns:ui="clr-namespace:SCME.UI"
       xmlns:local="clr-namespace:SCME.UI.PagesTech"
       xmlns:res="clr-namespace:SCME.UI.Properties"
+      xmlns:customControls="WpfControlLibrary"
       mc:Ignorable="d" x:Name="rACPage"
       d:DesignWidth="1280" d:DesignHeight="924">
     
@@ -46,7 +47,7 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.RACResVoltage}"/>
-                <customControl:ValidatingTextBox x:Name="vtbResVoltage" Grid.Column="1" Grid.Row="0" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="1000" Maximum="2500" Text="{Binding Parameters.ResVoltage, ElementName=rACPage, UpdateSourceTrigger=PropertyChanged}"/>
+                <customControls:ValidatingTextBox x:Name="vtbResVoltage" Grid.Column="1" Grid.Row="0" Padding="5" Margin="10,9,10,10" TextBlock.TextAlignment="Right" IsNumeric="True" Minimum="1000" Maximum="2500" Text="{Binding Parameters.ResVoltage, ElementName=rACPage, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.RACResultR}"/>
                 <Label Grid.Column="1" Grid.Row="1" Content="0" x:Name="lbResultR" FontSize="{StaticResource FontSize26}" Margin="0,0,7,0" Height="Auto"/>
