--- a/SCME.UI/PagesUser/UserTestPage.xaml
+++ b/SCME.UI/PagesUser/UserTestPage.xaml
@@ -8,6 +8,7 @@
       xmlns:ui="clr-namespace:SCME.UI"
       xmlns:thisPage="clr-namespace:SCME.UI.PagesUser"
       xmlns:dynamicDataDisplay="clr-namespace:Microsoft.Research.DynamicDataDisplay;assembly=DynamicDataDisplay"
+      xmlns:customControls="WpfControlLibrary"
       mc:Ignorable="d"
       d:DesignWidth="1280" d:DesignHeight="924"
       Name="userTestPage" 
@@ -64,8 +65,8 @@
         <Label x:Name="lbPsdJob" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Content="{x:Static res:Resources.PsdJob}" FontSize="28" Height="40" Margin="85,1,75,0" VerticalAlignment="Top" />
         <Label x:Name="lbPsdSerialNumber" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" Content="{x:Static res:Resources.PsdSerialNumber}" FontSize="28" Height="Auto" />
 
-        <customControl:ValidatingTextBox x:Name="tbPsdJob" Grid.Row="1" Grid.Column="0" FontSize="28" Margin="5,2" Padding="5,0" TextAlignment="Right" TabIndex="1" Text="{Binding PsdJob, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <customControl:ValidatingTextBox x:Name="tbPsdSerialNumber" Grid.Row="1" Grid.Column="1" FontSize="28" Margin="5,2" Padding="5,0" TextAlignment="Right" TabIndex="2" Text="{Binding PsdSerialNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <customControls:ValidatingTextBox x:Name="tbPsdJob" Grid.Row="1" Grid.Column="0" FontSize="28" Margin="5,2" Padding="5,0" TextAlignment="Right" TabIndex="1" Text="{Binding PsdJob, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <customControls:ValidatingTextBox x:Name="tbPsdSerialNumber" Grid.Row="1" Grid.Column="1" FontSize="28" Margin="5,2" Padding="5,0" TextAlignment="Right" TabIndex="2" Text="{Binding PsdSerialNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
         <Label x:Name="lbPseJob" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Center" Content="{x:Static res:Resources.PseJob}" FontSize="28" Height="Auto" />
         <Label x:Name="lbPseNumber" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" Content="{x:Static res:Resources.PseNumber}" FontSize="28" Height="Auto" />
@@ -82,8 +83,8 @@
                 <ColumnDefinition Width="80*"/>
             </Grid.ColumnDefinitions>
 
-            <customControl:ValidatingTextBox x:Name="tbPseJob" Grid.Column="0" Grid.Row="0" FontSize="28" Margin="5,2" Padding="5,0" TextAlignment="Right" TabIndex="3" Text="{Binding PseJob, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-            <customControl:ValidatingTextBox x:Name="tbPseNumber" Grid.Column="1" Grid.Row="0" FontSize="28" Margin="5,2" Padding="5,0" TextAlignment="Right" TabIndex="4" Text="{Binding PseNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextChanged="tbPseNumber_TextChanged"/>
+            <customControls:ValidatingTextBox x:Name="tbPseJob" Grid.Column="0" Grid.Row="0" FontSize="28" Margin="5,2" Padding="5,0" TextAlignment="Right" TabIndex="3" Text="{Binding PseJob, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <customControls:ValidatingTextBox x:Name="tbPseNumber" Grid.Column="1" Grid.Row="0" FontSize="28" Margin="5,2" Padding="5,0" TextAlignment="Right" TabIndex="4" Text="{Binding PseNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextChanged="tbPseNumber_TextChanged"/>
             <TextBlock x:Name="tblIdentificationWarning" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="13" Foreground="{StaticResource xRed1}">
                 <TextBlock.Text>
                     <MultiBinding Converter="{StaticResource MIF2T}">
