--- a/SCME.WpfControlLibrary/CustomControls/ValidatingTextBox.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ValidatingTextBox.xaml
@@ -6,27 +6,31 @@
          mc:Ignorable="d" d:DesignWidth="300" d:DesignHeight="50"
          GotFocus="TextBox_GotFocus" PreviewMouseDown="ValidatingTextBox_OnPreviewMouseDown"
          LostKeyboardFocus="TextBox_LostFocus"
-    >
-    <TextBox.Style>
-        <Style TargetType="{x:Type TextBox}">
-            <Setter Property="Foreground" Value="{StaticResource xBlack1}" />
-            <Setter Property="Margin" Value="0" />
-            <Setter Property="Padding" Value="10,0,5,0" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="HorizontalAlignment" Value="Stretch" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="HorizontalContentAlignment" Value="Left" />
-            <Setter Property="FontFamily" Value="Helvetica Neue LT Std" />
-            <Setter Property="FontSize" Value="{StaticResource FontSize24}" />
-            <Setter Property="FontWeight" Value="ExtraLight" />
-            <Setter Property="Text" Value="0" />
-            <Style.Triggers>
-                <Trigger Property="IsEnabled" Value="False">
-                    <Setter Property="Foreground" Value="DarkGray" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-    </TextBox.Style>
+         FontFamily="Helvetica Neue LT Std"
+         
+         FontWeight="ExtraLight" >
+
+
+
+    <!-- <TextBox.Style> -->
+    <!--     <Style TargetType="{x:Type TextBox}"> -->
+    <!--         <Setter Property="Focusable" Value="True" /> -->
+    <!--         <Setter Property="Margin" Value="0" /> -->
+    <!--         <Setter Property="Padding" Value="10,0,5,0" /> -->
+    <!--         <Setter Property="VerticalAlignment" Value="Stretch" /> -->
+    <!--         <Setter Property="HorizontalAlignment" Value="Stretch" /> -->
+    <!--         <Setter Property="VerticalContentAlignment" Value="Center" /> -->
+    <!--         <Setter Property="HorizontalContentAlignment" Value="Left" /> -->
+    <!--         <Setter Property="FontFamily" Value="Helvetica Neue LT Std" /> -->
+    <!--         <Setter Property="FontWeight" Value="ExtraLight" /> -->
+    <!--         <Setter Property="Text" Value="0" /> -->
+    <!--         <Style.Triggers> -->
+    <!--             <Trigger Property="IsEnabled" Value="False"> -->
+    <!--                 <Setter Property="Foreground" Value="DarkGray" /> -->
+    <!--             </Trigger> -->
+    <!--         </Style.Triggers> -->
+    <!--     </Style> -->
+    <!-- </TextBox.Style> -->
 
     <TextBox.ToolTip>
         <ToolTip Name="toolTip">
@@ -41,7 +45,6 @@
                                    Foreground="Red"
                                    Padding="5, 15, 5, 5"
                                    FontFamily="Helvetica Neue LT Std"
-                                   FontSize="{StaticResource FontSize20}"
                                    FontWeight="ExtraLight"
                                    Text="{TemplateBinding Content}" />
                     </Grid>
@@ -49,4 +52,7 @@
             </ToolTip.Template>
         </ToolTip>
     </TextBox.ToolTip>
+    
+    
+
 </TextBox>
